# Aethorac

./: .gitignore  CMakeLists.txt  check_sum.py  ctl.py  partitions.csv  sdkconfig  sdkconfig.old  tcp_client.py
components/action_group/: CMakeLists.txt  action_group.cpp  action_group.h
components/air_conditioner/: CMakeLists.txt  air_conditioner.cpp  air_conditioner.h
components/board_config/: CMakeLists.txt  board_config.cpp  board_config.h
components/commons/: CMakeLists.txt  commons.cpp  commons.h
components/config_structs/: CMakeLists.txt  config_structs.h
components/curtain/: CMakeLists.txt  curtain.cpp  curtain.h
components/delay_action/: CMakeLists.txt  delay_action.cpp  delay_action.h
components/lamp/: CMakeLists.txt  lamp.cpp  lamp.h
components/manager_base/: CMakeLists.txt  manager_base.cpp  manager_base.h
components/my_mqtt/: CMakeLists.txt  my_mqtt.cpp  my_mqtt.h
components/other_device/: CMakeLists.txt  other_device.cpp  other_device.h
components/panel/: CMakeLists.txt  panel.cpp  panel.h
components/rs485/: CMakeLists.txt  rs485.cpp  rs485.h
components/stm32_comm/: CMakeLists.txt  stm32_comm.cpp  stm32_comm.h
components/wifi/: CMakeLists.txt  wifi.cpp  wifi.h
ethernet/: ethernet.c
ethernet-UNOWEN/: CMakeLists.txt  ethernet.h
main/: CMakeLists.txt  hello_world_main.cpp  main.cpp
main/spiffs_image/: rcu_config.json
partition_table/: partitionTable.csv
ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.cpp  ui_events.h  ui_helpers.c  ui_helpers.h
ui/components/: ui_comp_hook.c
ui/fonts/: ui_font_AC_temp_MS70B2.c  (+9 more)
(+4 files in other folders)
